--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
