--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -69,6 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.2",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
